chore: update specification and models
