# src/main/java/com/genfood/foodgenback/endpoint/rest/mapper/UserMapper.java
@@ -1,0 +1,36 @@
+package com.genfood.foodgenback.endpoint.rest.mapper;
+
+import com.genfood.foodgenback.endpoint.rest.model.User;
+import lombok.AllArgsConstructor;
+import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.stereotype.Component;
+
+@Component
+@AllArgsConstructor
+public class UserMapper {
+  private final PasswordEncoder encoder;
+
+  public User toDto(com.genfood.foodgenback.model.User entity) {
+    return User.builder()
+        .id(entity.getId())
+        .email(entity.getEmail())
+        .username(entity.getUsername())
+        .password(entity.getPassword())
+        .firstname(entity.getFirstname())
+        .lastname(entity.getLastname())
+        .role(entity.getRole())
+        .build();
+  }
+
+  public com.genfood.foodgenback.model.User toEntity(User dto) {
+    return com.genfood.foodgenback.model.User.builder()
+        .id(dto.getId())
+        .lastname(dto.getLastname())
+        .firstname(dto.getFirstname())
+        .email(dto.getEmail())
+        .username(dto.getUsername())
+        .role(dto.getRole())
+        .password(encoder.encode(dto.getPassword()))
+        .build();
+  }
+}
