# src/main/java/com/genfood/foodgenback/endpoint/rest/model/SignUp.java
@@ -1,0 +1,16 @@
+package com.genfood.foodgenback.endpoint.rest.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import lombok.NoArgsConstructor;
+
+@EqualsAndHashCode(callSuper = true)
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+@Data
+public class SignUp extends Auth {
+  private String username;
+}
